--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -6,12 +6,28 @@ spring:
     url: jdbc:postgresql://localhost:5432/xmap
     username: postgres
     password: 12345
+  output:
+    ansi:
+      enabled: DETECT
 
 
 server:
+  port: 8080
   #для HTTPS, SSL шифрования и использования keypair
   ssl:
     enabled: true
     key-store-type: PKCS12
     key-store: classpath:ssl/xmap_ssl.pfx
     key-store-password: rootroot
+
+logging:
+
+  file.name: logs/application-debug.log
+  level:
+    root: ERROR
+    org.springframework.web: ERROR
+    org.hibernate: ERROR
+    com.xmap_api: DEBUG
+#  pattern:
+#    console: %d{yyyy-MM-dd HH:mm:ss} - %msg%n
+#    file: %d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
