14-mvp-for-getting-spot-list - Настроил первый эндпоинт + sql

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -4,8 +4,8 @@ spring:
 
   datasource:
     url: jdbc:postgresql://localhost:5432/xmap
-    username: postgres
-    password: 12345
+    username: postgres # локальные данные спалили :_)
+    password: postgres
 
   jpa:
     show-sql: true
@@ -16,11 +16,11 @@ spring:
 server:
   port: 8080
   #для HTTPS, SSL шифрования и использования keypair
-  ssl:
-    enabled: true
-    key-store-type: PKCS12
-    key-store: classpath:ssl/xmap_ssl.pfx
-    key-store-password: rootroot
+  # ssl: Пока без ssl на линуксе
+  #  enabled: true
+  #  key-store-type: PKCS12
+  #  key-store: classpath:ssl/xmap_ssl.pfx
+  #  key-store-password: rootroot
 
 logging:
   file.name: logs/main.log
