xmap-16 - Метод получения спота по id и рефакторинг

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -46,3 +46,8 @@ logging:
 #    console: '%d{yyyy-MM-dd HH:mm:ss} - %msg%n'
 #    file: '%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n'
 
+xmap-api:
+  spot-image:
+    # URN (Uniform Resource Name) - URL без scheme (без http://)
+    download-urn-template: "localhost:8080/api/v1/s3-file/spot-image/{spotId}"
+    download-urn-path-param: "{spotId}"
