--- a/src/main/resources/application-remote_server.yml
+++ b/src/main/resources/application-remote_server.yml
@@ -9,3 +9,9 @@ spring:
 
 logging:
   file.name: logs/main.log
+
+xmap-api:
+  spot-image:
+    # URN (Uniform Resource Name) - URL без scheme (без http://)
+    download-urn-template: "localhost:8080/api/v1/s3-file/spot-image/{spotId}"
+    download-urn-path-param: "{spotId}"
