--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -8,8 +8,8 @@ spring:
 
   datasource:
     url: jdbc:postgresql://localhost:5432/xmap
-    username: postgres # локальные данные спалили :_)
-    password: postgres
+    username: xmap_admin # локальные данные спалили :_)
+    password: 123
 
   #jpa:
     #show-sql: true
@@ -27,17 +27,20 @@ server:
   #  key-store-password: rootroot
 
 
-logging:
-  file:
-    # magic is spring will transfer logging.file.path into System properties LOG_PATH
-    path: /home/victor/xmap-app/Xmap-API/logs
+#logging:
+#  file:
+#    # magic is spring will transfer logging.file.path into System properties LOG_PATH
+#    path: ~/xmap/Xmap-API/logs
+#  level:
+#    root: debug
+#    web: debug
+#    jakarta: debug
 
 xmap-api:
   spot-image:
     # URN (Uniform Resource Name) - URL без scheme (без http://)
     download-urn-template: "/api/v1/s3-file/spot-image/{spotId}"
     download-urn-path-param: "{spotId}"
-
 
 
 
