--- a/ansible/inventories/spotic-test/group_vars/all.yml
+++ b/ansible/inventories/spotic-test/group_vars/all.yml
@@ -1,3 +1,5 @@
+
+deploy_path: /srv/spotic
 domain_name: test.spotic.ru
 ssh_authorized_keys:
   - "ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIOJdCxIToAgGNElGIxrgsDB6IE2IHklmaQ052tI5yb8+ vshulpov@gmail.com"
