--- a/backend-api/src/main/resources/application-test.yml
+++ b/backend-api/src/main/resources/application-test.yml
@@ -7,7 +7,7 @@ spring:
     change-log: classpath:db/changelog/main-changelog.xml
 
   datasource:
-    url: jdbc:postgresql://localhost:5432/xmap
+    url: jdbc:postgresql://127.0.0.1:5432/xmap
     username: xmap_admin # локальные данные спалили :_)
     password: 123
   servlet:
@@ -22,29 +22,9 @@ server:
     max-swallow-size: -1  # КРИТИЧНО: Tomcat пропустит ошибку в Spring (
 
 xmap-api:
-# "http://192.168.31.149:8082"
+  # "http://192.168.31.149:8082"
   base-url: "http://172.20.10.3:8082"
   s3-file:
     # URN (Uniform Resource Name) - URL без scheme (без http://)
     download-link-template: "/api/s3-file/{id}"
     download-link-path-param: "{id}"
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
